--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-This package contains various functions to scrape and clean play-by-play data from NHL.com. Season play-by-play data scraped with these functions can be found in the (hockeyR-data)[https://github.com/danmorse314/hockeyR-data] repository. It also contains functions to scrape data from hockey-reference.com, including standings, player stats, and jersey number history.
+This package contains various functions to scrape and clean play-by-play data from NHL.com. Season play-by-play data scraped with these functions can be found in the [hockeyR-data](https://github.com/danmorse314/hockeyR-data) repository. It also contains functions to scrape data from hockey-reference.com, including standings, player stats, and jersey number history.
 
 ## Installation
 
@@ -108,7 +108,7 @@ geom_hockey("nhl") +
     plot.caption = element_text(hjust = .9)
     )
 ```
-###   Future Work
+####   Future Work
 
 Getting clean data for games going back to the start of the NHL RTSS era (2007-2008 season) is in the works. There are also plans to create a basic expected goals model and perhaps a win probability model that would include xG values for each shot and win probabilities for each play, similar to the expected points model found in the [nflfastR](https://github.com/nflverse/nflfastR) package. And of course, scraping the upcoming NHL season and updating the data daily is planned for the 2021-2022 season.
 
