updated readme to reflect R 4.1 requirement

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,13 @@ This package contains various functions to scrape and clean play-by-play data fr
 
 ## Installation
 
-You can install the development version from [GitHub](https://github.com/) with:
+Before installing, confirm that your version of R is updated to at least 4.1.0. This will ensure R can handle R's native pipe operator (`|>`), which was unavailable until 4.1.0.  If you don't know which version of R is installed, try `verson$version.string` in your R console.
+
+```{r version}
+version$version.string
+```
+
+You can install the development version of `hockeyR` from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
