--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,8 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%"
+  out.width = "100%",
+  dpi=750,fig.width=7
 )
 ```
 
@@ -22,7 +23,7 @@ This package contains various functions to scrape and clean play-by-play data fr
 
 ## Installation
 
-Before installing, confirm that your version of R is updated to at least 4.1.0. This will ensure R can handle R's native pipe operator (`|>`), which was unavailable until 4.1.0.  If you don't know which version of R is installed, try `verson$version.string` in your R console.
+Before installing, confirm that your version of R is updated to at least 4.1.0. This will ensure R can handle R's native pipe operator `|>`, which was unavailable until 4.1.0.  If you don't know which version of R is installed, try `verson$version.string` in your R console.
 
 ```{r version}
 version$version.string
@@ -114,6 +115,7 @@ geom_hockey("nhl") +
     plot.caption = element_text(hjust = .9)
     )
 ```
+
 #### Future Work
 
 Getting clean data for games going back to the start of the NHL RTSS era (2007-2008 season) is in the works. There are also plans to create a basic expected goals model and perhaps a win probability model that would include xG values for each shot and win probabilities for each play, similar to the expected points model found in the [nflfastR](https://github.com/nflverse/nflfastR) package. And of course, scraping the upcoming NHL season and updating the data daily is planned for the 2021-2022 season.
