--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,12 @@ knitr::opts_chunk$set(
 # hockeyR <img src="man/figures/logo.png" align="right" width="25%" min-width="120px"/>
 
 <!-- badges: start -->
+[![CRAN status](https://www.r-pkg.org/badges/version/hockeyR)](https://CRAN.R-project.org/package=hockeyR)
+[![](https://img.shields.io/badge/devel%20version-0.1.0-blue.svg)](https://github.com/hockeyR)
+[![R-CMD-check](https://github.com/danmorse314/hockeyR/workflows/R-CMD-check/badge.svg)](https://github.com/danmorse314/hockeyR/actions)
+[![](https://img.shields.io/github/last-commit/danmorse314/hockeyR.svg)](https://github.com/danmorse314/hockeyR/commits/master)
+[![](http://cranlogs.r-pkg.org/badges/grand-total/hockeyR?color=blue)](https://cran.r-project.org/package=hockeyR)
+[![](https://img.shields.io/twitter/follow/danmorse_.svg?style=social)(https://twitter.com/danmorse_)]
 <!-- badges: end -->
 
 This package contains various functions to scrape and clean play-by-play data from NHL.com. Season play-by-play data scraped with these functions can be found in the [hockeyR-data](https://github.com/danmorse314/hockeyR-data) repository. It also contains functions to scrape data from hockey-reference.com, including standings, player stats, and jersey number history.
@@ -29,7 +35,13 @@ Before installing, confirm that your version of R is updated to at least 4.1.0. 
 version$version.string
 ```
 
-You can install the development version of `hockeyR` from [GitHub](https://github.com/) with:
+Install the released version of hockeyR from [CRAN](https://CRAN.R-project.org) with:
+
+``` r
+install.packages("hockeyR")
+```
+
+Install the development version of `hockeyR` from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
