--- a/README.Rmd
+++ b/README.Rmd
@@ -63,7 +63,7 @@ All variables available in the raw play-by-play data are included, along with a 
 
 The `shot_distance` and `shot_angle` are measured in feet and degrees, respectively. The variables `x_fixed` and `y_fixed` are transformations of the `x` and `y` event coordinates such that the home team is always shooting to the right and the away team is always shooting to the left. For full details on the included variables, see the [`scrape_game()`](https://github.com/danmorse314/hockeyR/blob/master/R/scrape_game.R) documentation.
 
-As mentioned above, an easy way to create a shot plot is through the [sportyR](https://github.com/rossdrucker/sportyR) package. You can also use the included `team_colors_logos` data to add color and team logos to your plots.
+As mentioned above, an easy way to create a shot plot is through the [sportyR](https://github.com/sportsdataverse/sportyR) package. You can also use the included `team_colors_logos` data to add color and team logos to your plots.
 
 ```{r shot-plot-example}
 # get single game
