added cran install instructions

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,14 @@ This package contains various functions to scrape and clean play-by-play data fr
 
 ## Installation
 
-Install the development version of `hockeyR` (requires R 3.5) from [GitHub](https://github.com/) with:
+
+Install the released version of hockeyR from [CRAN](https://CRAN.R-project.org) with:
+  
+  ``` r
+install.packages("hockeyR")
+```
+
+Alternatively, you can install the development version of `hockeyR` from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
@@ -120,7 +127,7 @@ geom_hockey("nhl") +
 
 ### Future Work
 
-Getting clean data for games going back to the start of the NHL RTSS era (2007-2008 season) is in the works. There are also plans to create a basic expected goals model and perhaps a win probability model that would include xG values for each shot and win probabilities for each play, similar to the expected points model found in the [nflfastR](https://github.com/nflverse/nflfastR) package. And of course, scraping the upcoming NHL season and updating the data daily is planned for the 2021-2022 season.
+Getting clean data for games going back to the start of the NHL RTSS era (2007-2008 season) is in the works. There are also plans to create a basic expected goals model and perhaps a win probability model that would include xG values for each shot and win probabilities for each play, similar to the expected points model found in the [nflfastR](https://github.com/nflverse/nflfastR) package. And of course, scraping the upcoming NHL season and updating the data daily is planned for the 2022-23 season.
 
 ##    Acknowledgments
 
